--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "cra-template": "1.3.0",
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1"
